--- a/App/app/src/main/res/layout/login.xml
+++ b/App/app/src/main/res/layout/login.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="@string/password"
+            android:hint="@string/password1"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
