Firebase Auth 기능을 사용하기 위해 아이디를 모두 이메일 주소로 교체함

--- a/App/app/src/main/res/layout/login.xml
+++ b/App/app/src/main/res/layout/login.xml
@@ -21,16 +21,16 @@
         android:visibility="gone">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/idField"
+            android:id="@+id/emailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:hint="@string/username">
+            android:hint="@string/email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
