home.xml 구성 요소들의 ID를 직관적으로 수정함

--- a/App/app/src/main/res/layout/home.xml
+++ b/App/app/src/main/res/layout/home.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/homeTabFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/userTravelDashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/dashboardBackground"
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:src="@drawable/test"
@@ -17,18 +19,19 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/dashboardText"
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:text="이미지 위의 텍스트"
-            android:textColor="#000"
-            android:textSize="20sp"
             android:layout_alignParentTop="true"
-            android:gravity="center" />
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:text=""
+            android:textColor="#000"
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/contentsFeed"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
