--- a/App/app/src/main/res/layout/post.xml
+++ b/App/app/src/main/res/layout/post.xml
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:text="댓글 보기"
         app:layout_constraintTop_toBottomOf="@id/likeCountTextView"
-        app:layout_constraintStart_toStartOf="@id/postImageView"/>
+        app:layout_constraintStart_toStartOf="@id/postImageView"
+        android:onClick="showComments"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
