--- a/App/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/App/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,33 +1,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/page_1"
+        android:id="@+id/homeTab"
         android:enabled="true"
         android:icon="@drawable/ic_home"
-        android:title="메뉴 1" />
+        android:title="홈" />
 
     <item
-        android:id="@+id/page_2"
+        android:id="@+id/searchTab"
         android:enabled="true"
         android:icon="@drawable/ic_search"
-        android:title="메뉴 2" />
+        android:title="검색" />
 
     <item
-        android:id="@+id/page_3"
+        android:id="@+id/newPostTab"
         android:enabled="true"
         android:icon="@drawable/ic_edit"
-        android:title="메뉴 3" />
+        android:title="새 글 작성" />
 
     <item
-        android:id="@+id/page_4"
+        android:id="@+id/myPlanTab"
         android:enabled="true"
         android:icon="@drawable/ic_map"
-        android:title="메뉴 4" />
+        android:title="내 여행 계획" />
 
     <item
-        android:id="@+id/page_5"
+        android:id="@+id/profileTab"
         android:enabled="true"
         android:icon="@drawable/ic_recoder"
-        android:title="메뉴 5" />
-
-
+        android:title="내 프로필" />
 </menu>
