로그인 테스트 용 코드 추가

--- a/App/app/src/main/res/layout/home_tab_fragment.xml
+++ b/App/app/src/main/res/layout/home_tab_fragment.xml
@@ -25,6 +25,13 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
+    <!--테스트용 로그아웃 버튼-->
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="로그아웃" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
