아이템의 배경색으로 사용할 colorItemBackground 색상 추가

--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -5,8 +5,5 @@
 
     <color name="colorPrimary">#1DE9B6</color>
     <color name="colorPrimaryDark">#14C89B</color>
-    <color name="colorAccent">#E0E0E0</color>
-    <color name="toolbarIconColor">#FFFFFF</color>
-    <color name="loginPageBackgroundColor">#FFFFFF</color>
-    <color name="productGridBackgroundColor">#FFFFFF</color>
+    <color name="colorItemBackground">#F2F2F2</color>
 </resources>
