--- a/App/app/src/main/res/layout/login.xml
+++ b/App/app/src/main/res/layout/login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/loginPageBackgroundColor"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="24dp">
 
