--- a/App/app/src/main/res/layout/siginup.xml
+++ b/App/app/src/main/res/layout/siginup.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom|center_horizontal"
-    android:background="@color/loginPageBackgroundColor"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="24dp">
 
