일부 리소스 파일 수정

--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
 
     <color name="colorPrimary">#1DE9B6</color>
     <color name="colorPrimaryDark">#14C89B</color>
-    <color name="colorItemBackground">#F2F2F2</color>
+    <color name="colorItemBackground">#D9D9D9</color>
 </resources>
