--- a/App/app/src/main/res/layout/fragment_profile_tab.xml
+++ b/App/app/src/main/res/layout/fragment_profile_tab.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profileTabLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,14 +36,14 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="5dp"
             android:layout_toEndOf="@+id/profileImage"
-            android:background="@drawable/ic_round"
+            android:background="@drawable/shape_button_dark"
             android:textSize="19sp"
             android:ems="5"
             android:gravity="center"
-            android:text="이름"
             android:textColor="#FFFFFF"
             android:textAlignment="center"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="이름"/>
 
         <TextView
             android:id="@+id/idText"
@@ -52,14 +53,15 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/profileImage"
-            android:background="@drawable/ic_round"
+            android:background="@drawable/shape_button_dark"
             android:ems="5"
             android:gravity="center"
-            android:text="아이디"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="19sp"
-            android:textStyle="bold"/>
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:maxLines="1"
+            tools:text="아이디"/>
 
         <TextView
             android:id="@+id/followNum"
@@ -69,11 +71,11 @@
             android:layout_toStartOf="@+id/followerNum"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
-            android:text="16\n팔로우"
             android:gravity="center"
             android:textAlignment="center"
             android:textSize="19sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="16\n팔로우"/>
 
         <TextView
             android:id="@+id/followerNum"
@@ -83,11 +85,11 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
-            android:text="16\n팔로워"
             android:gravity="center"
             android:textAlignment="center"
             android:textSize="19sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="16\n팔로워"/>
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -97,7 +99,7 @@
             android:layout_below="@+id/profileImage"
             android:layout_marginTop="20dp"
             android:layout_alignStart="@+id/profileImage"
-            android:background="@drawable/ic_round2"
+            android:background="@drawable/shape_button_dark"
             android:gravity="center"
             android:text="프로필 사진 변경"
             android:textAlignment="center"
@@ -113,7 +115,7 @@
             android:layout_marginTop="20dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/ic_round2"
+            android:background="@drawable/shape_button_dark"
             android:gravity="center"
             android:text="내 게시글 관리"
             android:textAlignment="center"
