--- a/App/app/src/main/res/layout/fragment_search_tab.xml
+++ b/App/app/src/main/res/layout/fragment_search_tab.xml
@@ -33,9 +33,10 @@
             android:orientation="horizontal" />
     </HorizontalScrollView>
 
-    <!-- Fragment Container -->
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainer"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/resultContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
