--- a/App/app/src/main/res/layout/item_search_suggestion_city.xml
+++ b/App/app/src/main/res/layout/item_search_suggestion_city.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:paddingTop="8dp"
+        android:paddingVertical="8dp"
         android:visibility="gone">
 
 
