--- a/App/app/src/main/res/layout/item_search_suggestion_city.xml
+++ b/App/app/src/main/res/layout/item_search_suggestion_city.xml
@@ -17,7 +17,7 @@
             android:id="@+id/item_thumbnail"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/test"
+            app:srcCompat="@drawable/global"
             android:contentDescription="@string/image"/>
 
 
